# NetworkPilot-CRM

./: .gitignore  .prettierignore  DEVELOPMENT_BACKLOG.md  README.md  package-lock.json  package.json  playwright.config.ts
backend/: .env.example  README.md  alembic.ini  pyproject.toml  render.yaml  requirements.txt
backend/app/: main.py  worker.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  errors.py  logging.py  security.py
backend/app/db/: base.py  database_url.py  session.py
backend/app/models/: __init__.py  activity.py  attachment.py  background_job.py  custom_field.py  import_batch.py  import_job.py  notification.py  person.py  person_merge.py  person_tag.py  pipeline_stage.py  saved_view.py  settings.py  tag.py  task.py  template.py  user.py  workspace.py  workspace_invite.py
backend/app/schemas/: activities.py  analytics.py  calendar.py  common.py  custom_field.py  dashboard.py  duplicates.py  exports.py  extension.py  imports.py  notifications.py  people.py  pipeline_stage.py  saved_views.py  tag.py  task.py  templates.py  users.py  workspace_invite.py  workspaces.py
backend/app/services/: activity_service.py  analytics_service.py  bulk_people_service.py  calendar_link_service.py  csv_export_service.py  csv_import_service.py  csv_sanitizer.py  custom_field_service.py  dashboard_service.py  duplicate_service.py  people_service.py  pipeline_stage_service.py  relationship_service.py  saved_views_service.py  storage_service.py  task_service.py  template_service.py  transition_service.py  url_normalizer.py  workspace_service.py  (+1 more)
(+238 files in other folders)
